--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
    <div class="boxOne">
 
+    <div 
+    class="imgContainer"> <img src="https://tse1.mm.bing.net/th?id=OIP.x-CE5frYvLFwpmt_SPDKRwHaHt&pid=Api" alt="horse"> 
+    </div>
+
         <div class="sectionOneText">
         <h1>
             what we do
@@ -25,20 +29,47 @@
         <p class="pOnetext"> this is an example text " we raise the best horses on this side of the mississippi yup thats right this text keeps on going
             " </p>
         </div>
-        <div 
-            class="imgContainer"> <img src="https://tse1.mm.bing.net/th?id=OIP.x-CE5frYvLFwpmt_SPDKRwHaHt&pid=Api" alt="horse"> 
-        </div>
+       
 
    </div>
 
    <div class="boxTwo">
-<div> 
-    About us
+<div class="aboutJoel"> 
+    About Joel
 </div>
+<div class="joelPicHolder">
+    <div class="text">
+        <p>this is sample text to be smashed
+             in the about me section untill i get 
+             something to fill it in</p>
+
+    </div> 
+    <div class="joelPic">
+<img src="https://up.yimg.com/ib/th?id=OIP.3PnfUonbkCZWov1kbnBOjgHaE7&%3Bpid=Api&rs=1&c=1&qlt=95&w=177&h=117" alt="joel image">
+    </div>
+</div>
+
+
+</div>
+
+
    </div>
 
 <div class="boxThree">
-   <div>Services</div>
+   <div class="services">Services</div>
+
+   <div class="listBox">
+    <ul>
+        <li> Halter Breaking</li>
+        <li>Trail Riding</li>
+        <li>Start & Finish</li>
+        <li>Broke horse Tune up</li>
+        <li> Reigning training</li>
+        <li>Rope Horse training</li>
+    </ul>
+   </div>
+
+
 
 </div>
 
