--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div class="header">
    
         <div class="introName">Mantooth Horsemanship</div>
-        <div> check us out on <a href="">Facebook</a></div>
+        <div class="facebook"> Find us on <a href="">Facebook</a></div>
    
    </div> 
 
@@ -28,6 +28,7 @@
         </h1>
         <p class="pOnetext"> this is an example text " we raise the best horses on this side of the mississippi yup thats right this text keeps on going
             " </p>
+            <a class="ourStory">Our Story</a>
         </div>
        
 
@@ -35,13 +36,21 @@
 
    <div class="boxTwo">
 <div class="aboutJoel"> 
-    About Joel
+    <p class="aboutJoelText">About Joel</p>
 </div>
 <div class="joelPicHolder">
     <div class="text">
+    <h3> Some cool stuff</h3>
+
         <p>this is sample text to be smashed
              in the about me section untill i get 
              something to fill it in</p>
+
+<div class="btnBox">
+    <a class="ourStory"> link one </a> 
+    <a class="ourStory"> link two</a>
+</div>
+
 
     </div> 
     <div class="joelPic">
@@ -56,19 +65,22 @@
    </div>
 
 <div class="boxThree">
-   <div class="services">Services</div>
-
-   <div class="listBox">
-    <ul>
-        <li> Halter Breaking</li>
-        <li>Trail Riding</li>
-        <li>Start & Finish</li>
-        <li>Broke horse Tune up</li>
-        <li> Reigning training</li>
-        <li>Rope Horse training</li>
-    </ul>
+<div class="boxThreeContainer">
+   <div class="listBoxTwo">
+    <h4>testimonials</h4>
+    <p> Here is a  text box that says stuff</p>
+    <p>here is another one that says other stuff</p>
+    <p> box three is crazy </p>
    </div>
 
+   <div class="listBox">
+    <h4>Services</h4>
+    <p> Here is a  text box that says stuff</p>
+    <p>here is another one that says other stuff</p>
+    <p> box three is crazy </p>
+ 
+   </div>
+   </div>
 
 
 </div>
