--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
              something to fill it in</p>
 
 <div class="btnBox">
-    <a class="ourStory"> link one </a> 
-    <a class="ourStory"> link two</a>
+    <a class="contact"> link one </a> 
+    <a class="contact"> link two</a>
 </div>
 
 
