--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
 </head>
 <body>
    <div class="header">
+    <div class="logoContainer">
+         <img src="./public/Screenshot 2024-04-04 at 9.33.13 PM.png" alt="">
+    </div>
    
         <div class="introName">Mantooth Horsemanship</div>
-        <div class="facebook"> Find us on <a href="">Facebook</a></div>
+        <div class="facebook"> <a href="">Facebook</a></div>
    
    </div> 
 
    <div class="boxOne">
 
     <div 
-    class="imgContainer"> <img src="https://tse1.mm.bing.net/th?id=OIP.x-CE5frYvLFwpmt_SPDKRwHaHt&pid=Api" alt="horse"> 
+    class="imgContainer"> 
+    <img src="./public/joelshorse.jpeg" alt="horse"> 
+    <img src="./public/horse2.jpeg" alt="">
     </div>
 
         <div class="sectionOneText">
         <h1>
-            what we do
+            Howdy!
             <i class="fa-solid fa-hat-cowboy"></i>
         </h1>
         <p class="pOnetext"> this is an example text " we raise the best horses on this side of the mississippi yup thats right this text keeps on going
@@ -32,37 +37,29 @@
         </div>
        
 
-   </div>
+   </div> 
+
+
 
    <div class="boxTwo">
-<div class="aboutJoel"> 
-    <p class="aboutJoelText">About Joel</p>
-</div>
-<div class="joelPicHolder">
+
+
+<div class="floatHolder">
     <div class="text">
     <h3> Some cool stuff</h3>
 
         <p>this is sample text to be smashed
              in the about me section untill i get 
              something to fill it in</p>
+            
 
 <div class="btnBox">
     <a class="contact"> link one </a> 
     <a class="contact"> link two</a>
 </div>
-
-
-    </div> 
-    <div class="joelPic">
-<img src="https://up.yimg.com/ib/th?id=OIP.3PnfUonbkCZWov1kbnBOjgHaE7&%3Bpid=Api&rs=1&c=1&qlt=95&w=177&h=117" alt="joel image">
-    </div>
 </div>
-
-
 </div>
-
-
-   </div>
+</div>
 
 <div class="boxThree">
 <div class="boxThreeContainer">
@@ -86,7 +83,7 @@
 </div>
 
    <div class="footer">
-    made by Ryan M
+    <p>Made by Ryan M</p>
    </div>
 
 
